--- a/src/style.scss
+++ b/src/style.scss
@@ -34,7 +34,10 @@ body {
 
 h2 {
   font-size: 1rem;
-  text-decoration: underline;
+  span {
+    padding-bottom: 2px;
+    border-bottom: 1.5px solid;
+  }
 }
 
 a {
@@ -113,7 +116,7 @@ nav {
     position: absolute;
     font-family: 'Arnhem';
     text-align: center;
-    right: 11%;
+    right: 12%;
     bottom: 10%;
 
     .underline {
