nav bottom size

--- a/src/style.scss
+++ b/src/style.scss
@@ -118,6 +118,7 @@ nav {
     text-align: center;
     right: 12%;
     bottom: 10%;
+    font-size: 1.1rem;
 
     .underline {
       padding-bottom: 2px;
