--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,8 @@ body {
 
 h2 {
   font-size: 1rem;
+  margin-bottom: 1rem;
+
   span {
     padding-bottom: 2px;
     border-bottom: 2px solid;
@@ -58,6 +60,8 @@ section {
     width: 40%;
     margin-right: 20%;
     line-height: 1.2rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
   }
 }
 
@@ -76,7 +80,6 @@ nav {
   top: 1rem;
   right: 4%;
   left: 4%;
-  bottom: 0;
 
   .nav__left {
     display: inline-block;
@@ -111,28 +114,29 @@ nav {
       border-bottom: 2px solid;
     }
   }
+}
 
-  .nav__bottom {
-    position: absolute;
-    font-family: 'Arnhem';
-    text-align: center;
-    right: 12%;
-    bottom: 10%;
-    font-size: 1.1rem;
+.nav__bottom {
+  position: fixed;
+  z-index: 2;
+  font-family: 'Arnhem';
+  text-align: center;
+  right: 12%;
+  bottom: 10%;
+  font-size: 1.1rem;
 
-    .underline {
-      padding-bottom: 2px;
-      border-bottom: 2px solid;
-    }
+  .underline {
+    padding-bottom: 2px;
+    border-bottom: 2px solid;
+  }
 
-    .header {
-      margin-bottom: 0.4rem;
-    }
+  .header {
+    margin-bottom: 0.4rem;
+  }
 
-    .nav__bottom__row {
-      display: block;
-      margin-bottom: 1.5rem;
-    }
+  .nav__bottom__row {
+    display: block;
+    margin-bottom: 1.5rem;
   }
 }
 
@@ -145,8 +149,30 @@ nav {
 }
 
 .a-propos {
+  h2 {
+    position: relative;
+    width: 40%;
+  }
+
   img {
     width: 40%;
+  }
+
+  .span--lang {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-bottom: 0;  
+
+    span {
+      padding-bottom: 0;
+      border-bottom: 0 solid;
+      &.active, &:hover {
+        cursor: pointer;
+        padding-bottom: 2px;
+        border-bottom: 2px solid;
+      }
+    }
   }
 }
 
