--- a/src/style.scss
+++ b/src/style.scss
@@ -163,10 +163,15 @@ nav {
   }
 
   img {
-    width: 100%;
+    // width: 100%;
+    // position: absolute;
+    // right: -25%;
+    // top: 5%;
+    // z-index: 0;
+    width: 30%;
     position: absolute;
-    right: -25%;
-    top: 5%;
+    right: 10%;
+    top: 10%;
     z-index: 0;
   }
 
